--- a/themes/ampradix/layouts/_default/list.html
+++ b/themes/ampradix/layouts/_default/list.html
@@ -36,7 +36,7 @@
                 <br>
                 {{ end }}
                 <div class="pl2 pb1 pt1">{{ .Content }}</div>
-                <div class="mb4"><a href="/contact" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact us</a>
+                <div class="mb4"><a href="/contact/#contact-form" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact Form</a>
 <a href="tel:2604821436" class="ampstart-btn ampstart-btn-primary caps inline-block">260.482.1436</a><div class="h4 col-10 pb1 pt1">Share Page</div>
 <div class="ampstart-social-box col-10 pb1 pt1">
   <amp-social-share type="twitter" aria-label="Share this on Twitter"></amp-social-share>
