--- a/themes/ampradix/layouts/_default/baseof.html
+++ b/themes/ampradix/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html ⚡="" lang="en">
     {{- partial "head.html" . -}}
     <body>
         {{- partial "header.html" . -}}
