update contact page

--- a/themes/ampradix/layouts/partials/head.html
+++ b/themes/ampradix/layouts/partials/head.html
@@ -13,7 +13,7 @@
 
   <script async="" src="https://cdn.ampproject.org/v0.js" async></script>
 
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="../../favicon.png">
 
   {{- partial "amp-boilerplate.html" . -}}
 
