--- a/themes/ampradix/layouts/shortcodes/imgcap.html
+++ b/themes/ampradix/layouts/shortcodes/imgcap.html
@@ -1,5 +1,5 @@
   <!-- Start Image with Caption -->
-  <figure class="ampstart-image-with-caption m0 relative mb4">
+  <figure class="ampstart-image-with-caption m0 relative mb4 pt3">
     <amp-img src="/{{ index .Params 0 }}" width="{{ index .Params 1 }}" height="{{ index .Params 2 }}" alt="{{ index .Params 3 }}" layout="responsive" class=""></amp-img>
     <figcaption class="h5 mt1 px3">
       {{ index .Params 4 }}
