--- a/themes/ampradix/layouts/_default/list.html
+++ b/themes/ampradix/layouts/_default/list.html
@@ -2,7 +2,7 @@
 <header class="www-header">
     <h1 class="mb4 px2 col-12 sm-col-8 mx-auto">{{ .Title }}</h1>
     <span class="h3 block mb4 px2 col-12 sm-col-8 mx-auto"><a href="/contact" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact us</a>
-    <a href="tel:2604821436" class="ampstart-btn ampstart-btn-primary caps inline-block">260.482.1436</a></span>
+        <a href="tel:2604821436" class="ampstart-btn ampstart-btn-primary caps inline-block">260.482.1436</a></span>
 </header>
 <main id="www-howitworks">
     <div class="www-howitworks flex block">
@@ -12,7 +12,6 @@
                 <header class=" h4 my2">
                     <small><a href="/" class="ml2">Home</a> | <strong>{{ .Title }}</strong></small>
                 </header>
-               
                 {{ range .Paginator.Pages }}
                 <a href="{{ .URL }}" class=" col-10 pb1 pt1 text-decoration-none">
                     <div class="flex " style="min-height: 175px">
@@ -36,13 +35,15 @@
                 <br>
                 {{ end }}
                 <div class="pl2 pb1 pt1">{{ .Content }}</div>
-                <div class="mb4"><a href="/contact/#contact-form" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact Form</a>
-<a href="tel:2604821436" class="ampstart-btn ampstart-btn-primary caps inline-block">260.482.1436</a><div class="h4 col-10 pb1 pt1">Share Page</div>
-<div class="ampstart-social-box col-10 pb1 pt1">
-  <amp-social-share type="twitter" aria-label="Share this on Twitter"></amp-social-share>
-  <amp-social-share type="facebook" data-param-text="Plant Engineering Services" data-param-href="https://pltengineering.com" data-param-app_id="{{ $.Site.Params.facebookAppId }}" aria-label="Share this on Facebook"></amp-social-share>
-  <amp-social-share type="pinterest" aria-label="Share this on pintrest"></amp-social-share>
-</div></div>
+<!--                 <div class="mb4"><a href="/contact" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact Form</a>
+                    <a href="tel:2604821436" class="ampstart-btn ampstart-btn-primary caps inline-block">260.482.1436</a>
+                    <div class="h4 col-10 pb1 pt1">Share Page</div>
+                    <div class="ampstart-social-box col-10 pb1 pt1">
+                        <amp-social-share type="twitter" aria-label="Share this on Twitter"></amp-social-share>
+                        <amp-social-share type="facebook" data-param-text="Plant Engineering Services" data-param-href="https://pltengineering.com" data-param-app_id="{{ $.Site.Params.facebookAppId }}" aria-label="Share this on Facebook"></amp-social-share>
+                        <amp-social-share type="pinterest" aria-label="Share this on pintrest"></amp-social-share>
+                    </div>
+                </div> -->
             </section>
         </article>
         <aside class="col-2 xs-hide"></aside>
