--- a/themes/ampradix/layouts/shortcodes/cta.html
+++ b/themes/ampradix/layouts/shortcodes/cta.html
@@ -1,2 +1,2 @@
-<a href="/contact/#contact-form" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact form</a>
+<a href="/contact" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact form</a>
 <a href="tel:2604821436" class="ampstart-btn ampstart-btn-primary caps inline-block">260.482.1436</a>
