--- a/themes/ampradix/layouts/index.html
+++ b/themes/ampradix/layouts/index.html
@@ -28,49 +28,45 @@
     <h2 class="h3 www-heading pb3 mb2 relative ">
         About Us
     </h2>
-    <div class="flex">
-        <aside class="col-1 xs-hide"></aside>
-        <article class=" col-10">
-            <section id="about-us" class="www-index-help pb4">
-                <div class="pt1 pb2  col-12">
-                    <amp-carousel id="carousel-with-lightbox" width="900" height="550" autoplay delay="3000" layout="responsive" type="slides" lightbox>
-                        <amp-img src="/homepage-slider-image-01.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-02.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-03.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-04.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-05.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-06.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-07.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-08.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-09.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-10.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-11.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-12.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-13.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-14.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-15.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-16.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-17.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-18.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-19.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-20.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-21.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-22.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-23.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-24.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-25.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-26.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-27.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-28.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-29.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-30.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                        <amp-img src="/homepage-slider-image-31.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
-                    </amp-carousel>
-                </div>
-                <div class="col-12 my2">{{ .Content | replaceRE "<p>" "<p class=\"my2 \">" | safeHTML }}</div>
-            </section>
-        </article>
-        <aside class="col-1 xs-hide"></aside>
-    </div>
+    <article class="flex-auto col-12">
+        <section id="about-us" class="www-index-help pb4">
+            <div class="pt1 pb2  col-12">
+                <amp-carousel id="carousel-with-lightbox" width="900" height="550" autoplay delay="3000" layout="responsive" type="slides" lightbox>
+                    <amp-img src="/homepage-slider-image-01.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-02.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-03.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-04.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-05.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-06.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-07.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-08.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-09.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-10.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-11.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-12.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-13.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-14.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-15.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-16.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-17.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-18.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-19.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-20.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-21.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-22.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-23.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-24.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-25.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-26.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-27.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-28.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-29.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-30.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                    <amp-img src="/homepage-slider-image-31.jpg" width="900" height="550" layout="responsive" alt="Press services image"></amp-img>
+                </amp-carousel>
+            </div>
+            <div class="col-12 my2">{{ .Content | replaceRE "<p>" "<p class=\"my2 \">" | safeHTML }}</div>
+        </section>
+    </article>
 </main>
 {{ end }}
