update bold and changes they requested in meeting

--- a/themes/ampradix/layouts/_default/list.html
+++ b/themes/ampradix/layouts/_default/list.html
@@ -20,7 +20,7 @@
                             </amp-img>
                         </div>
                         <div class="mr2 flex flex-column">
-                            <h2 class="h3 pb2">{{ .Title }}</h2>
+                            <h2 class="h3 pb2"><strong>{{ .Title }}</strong></h2>
                             <p class="pb2 ">{{ .Params.Description }}</p>
                             <div>
                                 <button class="ampstart-btn ampstart-btn-primary">
