--- a/themes/ampradix/layouts/index.html
+++ b/themes/ampradix/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <header class="www-header">
-    <h1 class="h2 mb4 px2 col-12 sm-col-8 mx-auto caps"><em>{{ .Title }}</em></h1>
+    <h1 class="h2 mb4 px2 col-12 sm-col-8 mx-auto caps"><strong><em>Plant <span class="red-font">Engineering</span> Services</em></strong></h1>
     <span class="h3 block mb4 px2 col-12 sm-col-8 mx-auto">Engineering Based Press Repair, Reconditioning, Modernization and Relocation Services <br><br><a href="/contact" class="ampstart-btn ampstart-btn-primary caps inline-block">Contact us</a>
         <a href="tel:2604821436" class="ampstart-btn ampstart-btn-primary caps inline-block">260.482.1436</a></span>
 </header>
@@ -8,7 +8,7 @@
     <article class="flex-auto col-12">
         <section class="www-index-help py4" id="latest-projects">
             <h2 class="h3 www-heading pb4 mb2 relative ">
-                Press Services
+                <strong>Press Services</strong>
             </h2>
             <div class="flex-container">
                 {{ range .Paginator.Pages }}
@@ -16,7 +16,7 @@
                     <div class="card mx1 my1">
                         <amp-img class="" src="{{ .Params.featured_image  | safeHTML }}" width="{{ .Params.featured_image_width }}" height="{{ .Params.featured_image_height }}" alt="{{ .Title }} Image" title="{{ .Title }}"></amp-img>
                         <div class="card-container">
-                            <h3 class="m3 caps ampstart-title-sm">{{ .Title }}</h3>
+                            <h3 class="m3 caps ampstart-title-sm"><strong>{{ .Title }}</strong></h3>
                             <p class="col-10 mx3 pb1 pt1">{{ .Params.Description }}</p>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
     </article>
     <article>
             <h2 class="h3 www-heading pb3 mb2 relative " id="about-us">
-        About Us
+        <strong>About Us</strong>
     </h2>
         <section class="flex">
             <aside class="col-2 xs-hide"></aside>
